test/valid/54483_mutual_recursion/mutual_recursion.mag
-- Author: 54483, Pedro Barata

-- Tests mutually recursive functions

fun even (x) : Int -> Bool =
  x == 0 || odd(x - 1)

fun odd (x) : Int -> Bool =
  x != 0 && even(x - 1)

fun main (_) : Unit -> Unit =
  print(even(10))
