test/invalid-semantics/54483_type_mismatch_add/type_mismatch_add.mag
-- Author: 54483, Pedro Barata

-- Semantic error: cannot add Int and Bool

fun main (_) : Unit -> Unit =
  print(1 + true)
